@@ -141,9 +141,8 @@
         <div class="box">
             <div class="box-text">
                 Our company was founded by four keyboard lovers, Zen, Joon Kiat, Jeremy, and Travis. We started off in Nanyang Polytechnic but have gone on to expand our business and have started to make an online shop and support overseas shipping. We want to share our love for keyboards across the world. It all started one day when Jeremy was given a crappy Microsoft Office keyboard for his 17th birthday by his parents, after just 2 weeks of using it, it broke down on him as he was about to clutch a 1v5 situation in Valorant. This caused him to rage so hard that he vowed to make a keyboard store so that others would not have to suffer the same fate as him. Together with 3 of his good friends, they founded FragranceKeebs inspired by his nickname Jeremy fragrance and have been selling and producing good quality and affordable custom keyboard kits ever since.
-            </div>
-            <img src="jeremy.jpg" alt="Jeremy">
-        </div>
+                <div class="box">
+                    <div class="box-text">
     </div>
     
     <div>
